[package]
name = "hnsw"
version = "0.6.1"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Fast approximate nearest neighbors"
keywords = ["hamming", "distance", "nearest", "neighbor", "search"]
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/rust-cv/hnsw"
documentation = "https://docs.rs/hnsw/"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde1 = ["serde", "space/serde", "hashbrown/serde"]

[dependencies]
space = { version = "0.10.3", features = ["candidates-vec"] }
rand_core = "0.5.1"
rustc-hash = { version = "1.1.0", default-features = false }
hashbrown = "0.8.2"
serde = { version = "1.0.115", features = ["derive"], optional = true }
libm = "0.2.1"

[dev-dependencies]
space = { version = "0.10.3", features = ["simd"] }
rand_pcg = "0.2.1"
hamming-heap = "0.4.1"
rand = "0.7.3"
criterion = "0.3.3"
gnuplot = "0.0.37"
structopt = "0.3.16"
easybench = "1.0.0"
itertools = "0.9.0"
float-ord = "0.2.0"
byteorder = "1.3.4"

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 3

[profile.release]
codegen-units = 1
# This is here so we can generate flamegraphs.
debug = true
