[package]
name = "hnsw"
version = "0.6.1"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Fast approximate nearest neighbors"
keywords = ["hamming", "distance", "nearest", "neighbor", "search"]
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/rust-cv/hnsw"
documentation = "https://docs.rs/hnsw/"
license = "MIT"
readme = "README.md"

[features]
serde1 = ["smallvec/serde", "serde"]

[[bench]]
name = "benches"
harness = false

[dependencies]
space = { version = "0.11.0", features = ["candidates-vec"] }
rand_core = "0.6.2"
rustc-hash = { version = "1.1.0", default-features = false }
hashbrown = "0.11.2"
serde = { version = "1.0.125", default-features = false, features = ["derive"], optional = true }
libm = "0.2.1"
smallvec = { version = "1.6.1", features = ["const_generics"] }

[dev-dependencies]
space = { version = "0.11.0", features = ["simd", "serde"] }
rand_pcg = { version = "0.3.0", features = ["serde1"] }
hamming-heap = "0.4.1"
rand = "0.8.3"
criterion = "0.3.4"
gnuplot = "0.0.37"
structopt = "0.3.21"
easybench = "1.1.0"
itertools = "0.10.0"
float-ord = "0.3.1"
byteorder = "1.4.3"
serde_json = "1.0.64"

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 3

[profile.release]
codegen-units = 1
# This is here so we can generate flamegraphs.
debug = true

[package.metadata.docs.rs]
all-features = true
