[package]
name = "hnsw"
version = "0.11.1-alpha.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Fast approximate nearest neighbors"
keywords = ["hamming", "distance", "nearest", "neighbor", "search"]
categories = ["algorithms", "data-structures", "science"]
repository = "https://github.com/rust-cv/hnsw"
documentation = "https://docs.rs/hnsw/"
license = "MIT"
readme = "README.md"

[features]
serde1 = ["smallvec/serde", "serde"]

[[bench]]
name = "benches"
harness = false

[dependencies]
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
rand_core = "0.6.3"
hashbrown = "0.11.2"
serde = { version = "1.0.126", default-features = false, features = ["derive"], optional = true }
libm = "0.2.1"
smallvec = { version = "1.6.1", features = ["const_generics"] }
ahash = { version = "0.7.4", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
rayon = "1.8.0"

[dev-dependencies]
space = { version = "0.17.0", features = ["serde", "alloc"] }
rand_pcg = { version = "0.3.1", features = ["serde1"] }
hamming-heap = "0.4.1"
rand = "0.8.4"
criterion = "0.3.4"
gnuplot = "0.0.37"
structopt = "0.3.22"
easybench = "1.1.0"
itertools = "0.10.1"
float-ord = "0.3.1"
byteorder = "1.4.3"
serde_json = "1.0.64"
num-traits = "0.2.14"
bitarray = { version = "0.9.1", default-features = false, features = ["space"] }

[profile.dev]
opt-level = 3

[profile.test]
# The tests take a very long time without optimization.
opt-level = 3

[profile.release]
codegen-units = 1
# This is here so we can generate flamegraphs.
debug = true

[package.metadata.docs.rs]
all-features = true
